<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/site_record_form"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="@color/peach"
                android:layout_marginTop="5dp"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Start date"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/date1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:hint="@string/dd_mm_yy"
                android:importantForAutofill="no"
                android:inputType="date"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/end_date"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/date2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:hint="@string/dd_mm_yy"
                android:importantForAutofill="no"
                android:inputType="date"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/fuel_stick_reading_before"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:hint="Quantity"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/meter_reading_before"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/start_time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/startToEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:hint="@string/start_time"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/end_time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/endToStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="5dp"
                android:focusable="false"
                android:hint="@string/end_time"
                android:inputType="textPostalAddress"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="20sp" />

        </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/fuel_type"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_local_gas_station_24"
                android:drawablePadding="5dp"
                android:hint="@string/fuel_type"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:inputType="text" /> -->


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/gross_gallon_dropped"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/net_gallon_dropped"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:hint="Quantity"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/fuel_stick_reading_after"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/meter_reading_after"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:hint="@string/quantity"
                android:inputType="number"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/bill_of_landing_number"
                android:textAlignment="center"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:src="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/capture"
                android:textSize="20sp"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/barcode_scanner"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/scanText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/barcode"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:text="@string/scan_now"
                android:textSize="20sp"
                android:layout_gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="100dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/teal_200"
                android:text="Continue"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>