<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dummy.MainActivity4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site_record_form"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/date"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/date1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_date"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:hint="dd/mm/yy"
                android:textSize="20sp"
                android:importantForAutofill="no"
                android:autofillHints="@string/date"
                android:textColor="@color/black"
                android:inputType="date"
                android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/fuel_stick_reading_before"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:textColor="@color/black"
                android:hint="Quantity"
                android:inputType="number"
                android:textSize="20sp"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="Meter Reading Before"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:hint="Quantity"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Start Time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/startToEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:hint="Start Time"
                android:inputType="number"
                android:textSize="20sp"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="End Time"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/endToStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_time"
                android:drawablePadding="5dp"
                android:hint="End Time"
                android:inputType="textPostalAddress"
                android:paddingStart="5dp"
                android:textSize="20sp"
                android:focusable="false"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="Fuel Type"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_local_gas_station_24"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:hint="Fuel Type"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="Gross Gallon Dropped"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:hint="Quantity"
                android:inputType="number"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="Net Gallon Dropped"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:hint="Quantity"
                android:textColor="@color/black"
                android:inputType="number"
                android:textSize="20sp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="Fuel Stick Reading After"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:hint="Quantity"
                android:textColor="@color/black"
                android:inputType="number"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="Meter Reading After"
                android:textSize="20sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_baseline_pending_24"
                android:drawablePadding="5dp"
                android:paddingStart="5dp"
                android:hint="Quantity"
                android:textColor="@color/black"
                android:inputType="number"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="Bill of Landing Number"
                android:textSize="20sp"/>


            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:src="@android:drawable/ic_menu_camera" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Capture" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Barcode Scanner"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Scan Now"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>